--- a/ON_Dashboard.Rmd
+++ b/ON_Dashboard.Rmd
@@ -278,7 +278,7 @@ plot_ly(x = ~Reported.Date, y = ~TotalCasesPerCapita,
          legend=list(title=list(text='<b> Per Capita Rates (1M)</b>'))) 
 ```
 
-# Testing Metrics 
+# Testing 
 
 ## Row {.tabset .tabset-fade}
 
